--- a/scss/object/_area1.scss
+++ b/scss/object/_area1.scss
@@ -132,29 +132,29 @@
     position: absolute;
     top: 25%;
     left: 75%;
-    transform: rotate(10deg);
+    // transform: rotate(10deg);
     filter: drop-shadow(0px 0px 20px rgb(250, 250, 59));
     @include overTab {
-      top: 35%;
+      top: 15%;
       left: 65%;
       width: 160px;
       height: 150px;
     }
   }
-  .area1-image6 {
-    width: 80px;
-    position: absolute;
-    top: 50%;
-    left: 75%;
-    transform: rotate(10deg);
-    filter: drop-shadow(0px 0px 20px rgb(250, 250, 59));
-    @include overTab {
-      top: 30%;
-      left: 85%;
-      width: 140px;
-      height: 130px;
-    }
-  }
+  // .area1-image6 {
+  //   width: 80px;
+  //   position: absolute;
+  //   top: 50%;
+  //   left: 75%;
+  //   transform: rotate(10deg);
+  //   filter: drop-shadow(0px 0px 20px rgb(250, 250, 59));
+  //   @include overTab {
+  //     top: 30%;
+  //     left: 85%;
+  //     width: 140px;
+  //     height: 130px;
+  //   }
+  // }
   .area1-image7 {
     width: 15vw;
     height: 10vh;
@@ -529,7 +529,7 @@
     font-size: 20px;
     border: 1px white solid;
     @include overTab {
-      font-size: 28px;
+      font-size: 26px;
       width: 40vw;
     }
     &::before {
