--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,8 @@
 @import "layout/common";
 @import "layout/footer";
 @import "object/area1";
+@import "object/area1-1";
+@import "object/area1-2";
 @import "object/area2";
 @import "object/area3";
 @import "object/area4";
