--- a/css/style.css
+++ b/css/style.css
@@ -1589,9 +1589,16 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area1-1 .area1-1-gbps1 img {
-    width: 350px;
-    top: 10%;
-    left: 65%;
+    width: 160px;
+    top: 0%;
+    left: 62%;
+  }
+}
+
+@media print, screen and (min-width: 768px) {
+  #area1-1 .area1-1-gbps1 .area1-1-gbps3 {
+    top: 8%;
+    left: 72%;
   }
 }
 
@@ -2013,9 +2020,9 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area1-2 .area1-2-gbps1 img {
-    width: 400px;
-    top: 30%;
-    left: 82%;
+    width: 450px;
+    top: 32%;
+    left: 80%;
   }
 }
 
@@ -2032,7 +2039,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area1-2 .area1-2-gbps1 .kira1 {
     width: 300px;
-    top: -5%;
+    top: -15%;
     left: 80%;
   }
 }
@@ -2071,7 +2078,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   #area1-2 .area1-2-gbps1 .kira3 {
     width: 200px;
     top: 10%;
-    left: 88%;
+    left: 83%;
   }
 }
 
@@ -2091,7 +2098,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   #area1-2 .area1-2-gbps1 .kira4 {
     width: 200px;
     top: 20%;
-    left: 89%;
+    left: 82%;
   }
 }
 
@@ -3783,80 +3790,6 @@ footer .follow-me li a[href*="tiktok"]::before {
   }
 }
 
-#area5 .list_design1 {
-  list-style: none;
-  counter-reset: list;
-  display: inline-block;
-  padding: 10px 8px;
-  border-radius: 30px;
-  background-color: rgba(255, 255, 255, 0.548);
-  -webkit-box-shadow: 2px 2px 4px gray;
-          box-shadow: 2px 2px 4px gray;
-  margin-right: 5px;
-  margin-left: 10px;
-}
-
-@media print, screen and (min-width: 768px) {
-  #area5 .list_design1 {
-    padding: 1rem 1rem;
-    margin: 1rem;
-    margin-left: 30px;
-  }
-}
-
-#area5 .list_design1 li {
-  position: relative;
-  padding: 10px 20px;
-  padding-left: 63px;
-  padding-right: 0px;
-  line-height: 30px;
-  border-bottom: 2px dotted red;
-  color: #333;
-  font-size: 24px;
-  margin-bottom: 5px;
-}
-
-@media print, screen and (min-width: 768px) {
-  #area5 .list_design1 li {
-    font-size: 30px;
-    margin-bottom: 30px;
-    padding: 1rem 1rem;
-    margin: 1rem;
-    padding-left: 60px;
-  }
-}
-
-#area5 .list_design1 li:before {
-  counter-increment: list;
-  content: counter(list);
-  position: absolute;
-  left: 0px;
-  width: 50px;
-  height: 62px;
-  text-align: center;
-  color: #fff;
-  line-height: 60px;
-  background: red;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
-#area5 .list_design1 li:after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 50px;
-  height: 0;
-  width: 0;
-  border-top: 5px solid transparent;
-  border-bottom: 5px solid transparent;
-  border-left: 7px solid red;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
 #area5 .area5-textarea {
   position: relative;
   margin: 2em 0;
@@ -3916,25 +3849,6 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area5 #emoji8:before {
   content: "\01F91D";
   padding-right: 3px;
-}
-
-#area5 .video iframe {
-  position: absolute;
-  margin: 0 auto;
-  width: auto;
-  top: 122%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-@media print, screen and (min-width: 768px) {
-  #area5 .video iframe {
-    width: 440px;
-    height: 260px;
-    top: 25%;
-    left: 80%;
-  }
 }
 
 #area5 .mokumoku3 {
@@ -4002,9 +3916,9 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area5 .area5-image1,
   #area5 .area5-image2 {
-    width: 300px;
-    top: 65%;
-    left: 65%;
+    width: 500px;
+    top: 55%;
+    left: 75%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
   }
@@ -4038,7 +3952,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area5 .kira1 {
     width: 200px;
-    top: 55%;
+    top: 35%;
     left: 83%;
   }
 }
@@ -4056,7 +3970,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area5 .kira2 {
     width: 320px;
-    top: 55%;
+    top: 35%;
     left: 65%;
   }
 }
@@ -4074,7 +3988,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area5 .kira3 {
     width: 300px;
-    top: 58%;
+    top: 38%;
     left: 85%;
   }
 }
@@ -4125,7 +4039,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   #area5 .sim-text3 {
     font-size: 2.4rem;
     width: 400px;
-    top: 75%;
+    top: 80%;
     left: 75%;
   }
 }
@@ -4152,7 +4066,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area5 .area5-lower .japan-map {
   position: absolute;
   width: 160px;
-  top: 30%;
+  top: 35%;
   left: 30%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -4160,84 +4074,8 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area5 .area5-lower .japan-map {
-    left: 35%;
-    width: 370px;
-  }
-}
-
-#area5 .area5-lower .arrow1 {
-  position: absolute;
-  width: 160px;
-  top: 30%;
-  left: 30%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
-
-@media print, screen and (min-width: 768px) {
-  #area5 .area5-lower .arrow1 {
-    left: 28%;
-    height: 100px;
-    width: 50px;
-  }
-}
-
-#area5 .area5-lower .arrow2 {
-  position: absolute;
-  width: 160px;
-  top: 37%;
-  left: 30%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-transform: rotate(35deg);
-          transform: rotate(35deg);
-}
-
-@media print, screen and (min-width: 768px) {
-  #area5 .area5-lower .arrow2 {
-    left: 32%;
-    height: 60px;
-    width: 50px;
-  }
-}
-
-#area5 .area5-lower .arrow3 {
-  position: absolute;
-  width: 160px;
-  top: 25%;
-  left: 30%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-transform: rotate(-40deg);
-          transform: rotate(-40deg);
-}
-
-@media print, screen and (min-width: 768px) {
-  #area5 .area5-lower .arrow3 {
-    left: 36%;
-    height: 60px;
-    width: 55px;
-  }
-}
-
-#area5 .area5-lower .arrow4 {
-  position: absolute;
-  width: 160px;
-  top: 15%;
-  left: 30%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-transform: rotate(-140deg);
-          transform: rotate(-140deg);
-}
-
-@media print, screen and (min-width: 768px) {
-  #area5 .area5-lower .arrow4 {
-    left: 32%;
-    height: 80px;
-    width: 105px;
+    left: 75%;
+    width: 500px;
   }
 }
 
@@ -4245,7 +4083,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area5 .area5-lower .sagawa2 {
   position: absolute;
   width: 160px;
-  top: 10%;
+  top: 56%;
   left: 30%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -4254,8 +4092,8 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area5 .area5-lower .sagawa1,
   #area5 .area5-lower .sagawa2 {
-    left: 20%;
-    width: 320px;
+    left: 40%;
+    width: 350px;
   }
 }
 
@@ -4270,9 +4108,9 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area5 .area5-lower .logo-delivery {
-    top: 33%;
-    left: 33.5%;
-    width: 45px;
+    top: 46%;
+    left: 77%;
+    width: 60px;
   }
 }
 
@@ -4280,44 +4118,20 @@ footer .follow-me li a[href*="tiktok"]::before {
   width: 180px;
   top: 30%;
   left: 80%;
-  -webkit-filter: drop-shadow(5px 2px 0 white);
-          filter: drop-shadow(5px 2px 0 white);
+  -webkit-filter: drop-shadow(10px 2px 0 white);
+          filter: drop-shadow(10px 2px 0 white);
 }
 
 @media print, screen and (min-width: 768px) {
   #area5 .area5-lower .sagawa2 {
-    top: 44%;
+    top: 54%;
     left: 15%;
-    width: 350px;
+    width: 430px;
   }
 }
 
-#area5 .area5-lower .frame1 {
-  display: inline-block;
-  position: relative;
-  left: 50%;
-  width: 320px;
-  -webkit-transform: translate(-50%, 0%);
-          transform: translate(-50%, 0%);
-}
-
-@media print, screen and (min-width: 768px) {
-  #area5 .area5-lower .frame1 {
-    left: 30%;
-    width: 550px;
-  }
-}
-
-#area5 .area5-lower .frame1::after {
-  position: absolute;
-  display: block;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  -webkit-box-shadow: inset 0 0 10px #fff, inset 0 0 10px #fff, inset 0 0 10px #fff, inset 0 0 10px #fff;
-          box-shadow: inset 0 0 10px #fff, inset 0 0 10px #fff, inset 0 0 10px #fff, inset 0 0 10px #fff;
+#area5 .area5-lower .map-back {
+  opacity: 0.4;
 }
 
 #area5 .area5-lower h2 {
@@ -4337,9 +4151,9 @@ footer .follow-me li a[href*="tiktok"]::before {
   #area5 .area5-lower h2 {
     top: 30%;
     letter-spacing: 0.1em;
-    width: 800px;
+    width: 750px;
     left: 70%;
-    font-size: 3.8rem;
+    font-size: 3.5rem;
   }
 }
 
@@ -4496,6 +4310,102 @@ footer .follow-me li a[href*="tiktok"]::before {
   #area5 .area5-lower .what-btn::before {
     width: 24px;
     height: 24px;
+  }
+}
+
+#area5 .map {
+  border-top: 0.5px solid #ffffff42;
+  background: url("../image/truck.jpg") center center no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  max-width: 1500px;
+  padding: 40px 0 20px;
+  height: 400px;
+  position: relative;
+  margin: 0 auto;
+  -webkit-box-shadow: 1px 3px 20px 10px white, inset 10px 3px 20px 10px whitesmoke;
+          box-shadow: 1px 3px 20px 10px white, inset 10px 3px 20px 10px whitesmoke;
+}
+
+#area5 .map::after {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.308);
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+#area5 .map h1,
+#area5 .map h2 {
+  letter-spacing: 0.1em;
+  color: black;
+  text-align: center;
+  font-size: 12px;
+  z-index: 10;
+}
+
+#area5 .map h1 {
+  color: white;
+  position: absolute;
+  font-size: 38px;
+  margin-bottom: 30px;
+  display: inline-block;
+  text-align: left;
+  top: 20%;
+  left: 10%;
+  letter-spacing: inherit;
+  -webkit-transform: translateY(10%) translateX(-20%);
+  transform: translateY(10%) translateX(-20%);
+  font-weight: bold;
+}
+
+@media print, screen and (min-width: 768px) {
+  #area5 .map h1 {
+    font-size: 2rem;
+  }
+}
+
+#area5 .map h2 {
+  color: white;
+  position: absolute;
+  margin-bottom: 20px;
+  font-size: 20px;
+  top: 35%;
+  left: 10%;
+  letter-spacing: inherit;
+  -webkit-transform: translateY(10%) translateX(-10%);
+  transform: translateY(10%) translateX(-10%);
+  font-weight: bold;
+  text-align: left;
+  letter-spacing: 0.15rem;
+}
+
+@media print, screen and (min-width: 768px) {
+  #area5 .map h2 {
+    margin-bottom: inherit;
+    font-size: 1.5rem;
+  }
+}
+
+#area5 .map .map-back {
+  height: 60%;
+  width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+@media print, screen and (min-width: 768px) {
+  #area5 .map .map-back {
+    height: 200px;
+    width: 70%;
   }
 }
 
@@ -4682,7 +4592,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   font-family: FontAwesome;
 }
 
-#area5 .what a[href*="line"]::before {
+#area5 .what a[href*="wa.me"]::before {
   background-color: #25D366;
   content: "\f40c";
 }
@@ -4691,7 +4601,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   font-family: FontAwesome;
 }
 
-#area5 .what a[href*="line"]::after {
+#area5 .what a[href*="wa.me"]::after {
   background-color: #25D366;
   content: "\f40c";
 }
