--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,14 +14,14 @@ header {
   max-width: 1300px;
   margin: 0 auto;
   position: relative;
-  height: 270px;
+  height: 370px;
   @include overTab {
     height: 900px;
   }
   .logo1 {
     width: 15%;
     position: absolute;
-    top: 5%;
+    top: 14%;
     left: 15%;
     transform: translate(-50%, -50%);
     box-shadow: 1px 3px 5px 5px rgb(245, 245, 56),
@@ -37,7 +37,7 @@ header {
   .logo2 {
     width: 55%;
     position: absolute;
-    top: 5%;
+    top: 14%;
     left: 55%;
     transform: translate(-50%, -50%);
     @include overTab {
@@ -65,8 +65,9 @@ header {
     width: auto;
     max-width: 760px;
     position: relative;
-    top: 200px;
+    top: 100px;
     @include overTab {
+      top: 200px;
       margin: 0 auto;
       width: 800px;
       max-width: 1300px;
@@ -78,7 +79,6 @@ header {
       border-radius: 30px;
       color: #fff;
       padding: 20px 20px;
-      padding-right: 140px;
       font-size: 16px;
       line-height: 1.5;
       @include overTab {
@@ -105,9 +105,9 @@ header {
     }
     .profile2 {
       z-index: 5;
-      top: 15%;
-      width: 120px;
-      left: 78%;
+      top: 40%;
+      width: 200px;
+      left: -5%;
       transform: translate(-50%, -50%);
       transform: rotate(-20deg);
       @include overTab {
@@ -132,21 +132,26 @@ header {
   }
   .video {
     width: 100%;
-    padding-bottom: 56.25%;
+    padding-bottom: 36.25%;
     height: 0px;
     position: relative;
     margin-bottom: 100px;
     @include overTab {
+      padding-bottom: 56.25%;
       margin-bottom: inherit;
     }
   }
   .video iframe {
     position: absolute;
-    top: 65%;
+    top: 150%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: auto;
+    height: 200px;
     @include overTab {
+      top: 65%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       width: 70%;
       height: 60%;
     }
