--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ header {
   max-width: 1300px;
   margin: 0 auto;
   position: relative;
-  height: 270px;
+  height: 370px;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -60,7 +60,7 @@ header {
 header .logo1 {
   width: 15%;
   position: absolute;
-  top: 5%;
+  top: 14%;
   left: 15%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -81,7 +81,7 @@ header .logo1 {
 header .logo2 {
   width: 55%;
   position: absolute;
-  top: 5%;
+  top: 14%;
   left: 55%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -118,11 +118,12 @@ header .profile-area {
   width: auto;
   max-width: 760px;
   position: relative;
-  top: 200px;
+  top: 100px;
 }
 
 @media print, screen and (min-width: 768px) {
   header .profile-area {
+    top: 200px;
     margin: 0 auto;
     width: 800px;
     max-width: 1300px;
@@ -137,7 +138,6 @@ header .profile-area .profile-text {
   border-radius: 30px;
   color: #fff;
   padding: 20px 20px;
-  padding-right: 140px;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -175,9 +175,9 @@ header .profile-area .profile1 {
 
 header .profile-area .profile2 {
   z-index: 5;
-  top: 15%;
-  width: 120px;
-  left: 78%;
+  top: 40%;
+  width: 200px;
+  left: -5%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   -webkit-transform: rotate(-20deg);
@@ -210,7 +210,7 @@ header #emoji3:before {
 
 header .video {
   width: 100%;
-  padding-bottom: 56.25%;
+  padding-bottom: 36.25%;
   height: 0px;
   position: relative;
   margin-bottom: 100px;
@@ -218,21 +218,27 @@ header .video {
 
 @media print, screen and (min-width: 768px) {
   header .video {
+    padding-bottom: 56.25%;
     margin-bottom: inherit;
   }
 }
 
 header .video iframe {
   position: absolute;
-  top: 65%;
+  top: 150%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   width: auto;
+  height: 200px;
 }
 
 @media print, screen and (min-width: 768px) {
   header .video iframe {
+    top: 65%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     width: 70%;
     height: 60%;
   }
@@ -528,11 +534,11 @@ footer .follow-me li a[href*="tiktok"]::before {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  padding-left: 35px;
 }
 
 @media print, screen and (min-width: 768px) {
   #area1 .introduce-content .area1-list p {
+    padding-left: 35px;
     font-size: 3rem;
   }
 }
@@ -570,7 +576,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1 .area1-image1 {
   width: 15vw;
-  height: 11vh;
+  height: 15vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -578,11 +584,11 @@ footer .follow-me li a[href*="tiktok"]::before {
       -ms-flex-align: center;
           align-items: center;
   padding: 70px 0;
-  padding-left: 20px;
 }
 
 @media print, screen and (min-width: 768px) {
   #area1 .area1-image1 {
+    padding-left: 20px;
     width: 100%;
     height: 18vh;
   }
@@ -590,7 +596,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1 .area1-image4 {
   width: 15vw;
-  height: 10vh;
+  height: 15vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -598,20 +604,21 @@ footer .follow-me li a[href*="tiktok"]::before {
       -ms-flex-align: center;
           align-items: center;
   padding: 40px 0;
-  padding-left: 20px;
 }
 
 @media print, screen and (min-width: 768px) {
   #area1 .area1-image4 {
+    padding-left: 20px;
     width: 100%;
     height: 18vh;
   }
 }
 
 #area1 .area1-image2 {
-  width: 120px;
+  width: 90px;
   position: absolute;
-  left: 65%;
+  top: -25%;
+  left: 55%;
   -webkit-transform: rotate(10deg);
           transform: rotate(10deg);
   z-index: 4;
@@ -627,12 +634,22 @@ footer .follow-me li a[href*="tiktok"]::before {
   }
 }
 
+#area1 .area1-image2-1 {
+  left: 72%;
+}
+
 @media print, screen and (min-width: 768px) {
   #area1 .area1-image2-1 {
     width: 200px;
     top: 20%;
     left: 70%;
   }
+}
+
+#area1 .area1-image2-2 {
+  width: 120px;
+  top: 35%;
+  left: 65%;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -644,10 +661,10 @@ footer .follow-me li a[href*="tiktok"]::before {
 }
 
 #area1 .area1-image3 {
-  width: 100px;
+  width: 130px;
   position: absolute;
   top: -8%;
-  left: 69%;
+  left: 65%;
   -webkit-transform: rotate(10deg);
           transform: rotate(10deg);
   -webkit-box-shadow: 1px 3px 20px 10px #f7f77d, inset 10px 3px 20px 10px #f7f77d;
@@ -663,10 +680,10 @@ footer .follow-me li a[href*="tiktok"]::before {
 }
 
 #area1 .area1-image5 {
-  width: 70px;
+  width: 130px;
   position: absolute;
-  top: 25%;
-  left: 75%;
+  top: -15%;
+  left: 66%;
   -webkit-filter: drop-shadow(0px 0px 20px #fafa3b);
           filter: drop-shadow(0px 0px 20px #fafa3b);
 }
@@ -681,10 +698,10 @@ footer .follow-me li a[href*="tiktok"]::before {
 }
 
 #area1 .area1-image6 {
-  width: 80px;
+  width: 130px;
   position: absolute;
-  top: 50%;
-  left: 75%;
+  top: 45%;
+  left: 66%;
   -webkit-filter: drop-shadow(0px 0px 20px #fafa3b);
           filter: drop-shadow(0px 0px 20px #fafa3b);
 }
@@ -700,7 +717,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1 .area1-image7 {
   width: 15vw;
-  height: 10vh;
+  height: 15vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -708,11 +725,11 @@ footer .follow-me li a[href*="tiktok"]::before {
       -ms-flex-align: center;
           align-items: center;
   padding: 80px 0;
-  padding-left: 20px;
 }
 
 @media print, screen and (min-width: 768px) {
   #area1 .area1-image7 {
+    padding-left: 20px;
     width: 100%;
     height: 18vh;
   }
@@ -721,8 +738,8 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area1 .area1-image8 {
   width: 100px;
   position: absolute;
-  top: 52%;
-  left: 68%;
+  top: -5%;
+  left: 70%;
   -webkit-transform: rotate(10deg);
           transform: rotate(10deg);
   -webkit-box-shadow: 1px 3px 20px 10px #f7f77d, inset 10px 3px 20px 10px #f7f77d;
@@ -739,7 +756,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1 .area1-image9 {
   width: 15vw;
-  height: 11vh;
+  height: 15vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -747,11 +764,11 @@ footer .follow-me li a[href*="tiktok"]::before {
       -ms-flex-align: center;
           align-items: center;
   padding: 40px 0;
-  padding-left: 20px;
 }
 
 @media print, screen and (min-width: 768px) {
   #area1 .area1-image9 {
+    padding-left: 20px;
     width: 100%;
     height: 18vh;
   }
@@ -784,6 +801,8 @@ footer .follow-me li a[href*="tiktok"]::before {
   font-size: 1.2rem;
   font-weight: bold;
   padding-top: 10px;
+  position: relative;
+  z-index: 10;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -796,6 +815,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1 .intro-text1 .text1-title {
   color: #f3d53d;
+  font-size: 1.6rem;
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.342), -1px -1px 0 rgba(255, 255, 255, 0.342), -1px 1px 0 rgba(255, 255, 255, 0.342), 1px -1px 0 rgba(255, 255, 255, 0.342), 0px 1px 0 rgba(255, 255, 255, 0.342), 0 -1px 0 rgba(255, 255, 255, 0.342), -1px 0 0 rgba(255, 255, 255, 0.342), 1px 0 0 rgba(255, 255, 255, 0.342);
 }
 
@@ -806,7 +826,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 }
 
 #area1 .intro-text1 .GB1 {
-  font-size: 1.8rem;
+  font-size: 1.2rem;
   color: #fff;
   text-shadow: 3px 3px 0 #000, -3px -3px 0 #000, -3px 3px 0 #000, 3px -3px 0 #000, 0px 3px 0 #000, 0 -3px 0 #000, -3px 0 0 #000, 3px 0 0 #000;
 }
@@ -838,7 +858,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area1 .intro-text1 .price2 {
   color: #e43e5a;
   font-weight: 900;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff, 0px 1px 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff, 1px 0 0 #fff;
 }
 
@@ -894,7 +914,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   width: 100%;
   height: 200px;
   position: relative;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -910,6 +930,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   width: auto;
+  height: 200px;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -937,7 +958,12 @@ footer .follow-me li a[href*="tiktok"]::before {
   position: relative;
   border-radius: 30px;
   margin: 0 auto;
-  width: 1200px;
+}
+
+@media print, screen and (min-width: 768px) {
+  #area1 .customer {
+    width: 1200px;
+  }
 }
 
 #area1 .customer::before {
@@ -948,9 +974,16 @@ footer .follow-me li a[href*="tiktok"]::before {
   border-style: solid;
   z-index: 10;
   top: -5px;
-  right: -5px;
+  right: 0px;
   border-width: 0 50px 50px 0;
   border-color: transparent #fcfbfb transparent transparent;
+}
+
+@media print, screen and (min-width: 768px) {
+  #area1 .customer::before {
+    top: -5px;
+    right: -5px;
+  }
 }
 
 #area1 .customer::after {
@@ -960,10 +993,17 @@ footer .follow-me li a[href*="tiktok"]::before {
   height: 0;
   border-style: solid;
   z-index: 10;
-  bottom: 10px;
-  left: -5px;
+  bottom: 5px;
+  left: 0px;
   border-width: 50px 0 0 50px;
   border-color: transparent transparent transparent #fcfbfb;
+}
+
+@media print, screen and (min-width: 768px) {
+  #area1 .customer::after {
+    bottom: 10px;
+    left: -5px;
+  }
 }
 
 #area1 .customer .customer1 {
@@ -1000,9 +1040,9 @@ footer .follow-me li a[href*="tiktok"]::before {
 }
 
 #area1 .fukidashi1 {
-  width: 100vw;
-  height: 130px;
-  top: -100px;
+  width: 50vw;
+  height: 80px;
+  top: -60px;
   position: absolute;
   left: 0px;
   z-index: 11;
@@ -1010,16 +1050,18 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area1 .fukidashi1 {
+    height: 120px;
+    top: -100px;
     width: 25vw;
     left: 200px;
   }
 }
 
 #area1 .customer-text {
-  top: -78px;
-  left: 50px;
+  top: -40px;
+  left: 46px;
   position: absolute;
-  font-size: 1.0rem;
+  font-size: 1.5rem;
   font-weight: bold;
   z-index: 12;
 }
@@ -1027,6 +1069,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area1 .customer-text {
     font-size: 3.0rem;
+    top: -78px;
     left: 250px;
   }
 }
@@ -1083,8 +1126,15 @@ footer .follow-me li a[href*="tiktok"]::before {
 }
 
 #area1 .balloon1 .text-line {
+  max-width: 760px;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(70%, rgba(0, 0, 0, 0)), color-stop(70%, rgba(238, 135, 117, 0.952)));
   background-image: linear-gradient(rgba(0, 0, 0, 0) 70%, rgba(238, 135, 117, 0.952) 70%);
+}
+
+@media print, screen and (min-width: 768px) {
+  #area1 .balloon1 .text-line {
+    max-width: 1300px;
+  }
 }
 
 #area1 .follow-me {
@@ -1216,11 +1266,11 @@ footer .follow-me li a[href*="tiktok"]::before {
   color: white;
   text-align: center;
   background: #25D366;
-  padding: 15px 0;
+  padding: 18px 0;
   margin: auto;
   margin-bottom: 20px;
   width: 100%;
-  font-size: 25px;
+  font-size: 17px;
   border: 1px white solid;
 }
 
@@ -1452,11 +1502,11 @@ footer .follow-me li a[href*="tiktok"]::before {
   position: absolute;
   margin-top: 80px;
   display: block;
-  width: 250px;
+  width: 200px;
   height: auto;
   z-index: 4;
-  top: 220%;
-  left: 45%;
+  top: 260%;
+  left: 60%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
@@ -1472,8 +1522,8 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area1-1 .area1-1-wifi1 .kira1 {
   width: 120px;
   position: absolute;
-  top: 196%;
-  left: 20%;
+  top: 246%;
+  left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: 5;
@@ -1490,7 +1540,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area1-1 .area1-1-wifi1 .kira2 {
   width: 180px;
   position: absolute;
-  top: 198%;
+  top: 248%;
   left: 55%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -1508,8 +1558,8 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area1-1 .area1-1-wifi1 .kira3 {
   width: 140px;
   position: absolute;
-  top: 210%;
-  left: 55%;
+  top: 255%;
+  left: 65%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   -webkit-transform: rotate(90deg);
@@ -1547,16 +1597,16 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1-1 .area1-1-wifi1 .circle {
   position: absolute;
-  top: 265%;
-  left: 46%;
+  top: 295%;
+  left: 60%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   background: white;
   border-radius: 50%;
   -webkit-box-shadow: 0.375em 0.375em 0 0 #f7f77d;
           box-shadow: 0.375em 0.375em 0 0 #f7f77d;
-  height: 11em;
-  width: 20em;
+  height: 7em;
+  width: 18em;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -1572,16 +1622,16 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1-1 .area1-1-wifi1 .wifi-text {
   position: absolute;
-  width: 320px;
-  top: 270%;
-  left: 45%;
+  width: 220px;
+  top: 310%;
+  left: 60%;
   padding: 5px 0;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: 5;
   background-color: #e40808;
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-style: italic;
   letter-spacing: 0.1em;
   color: #fff;
@@ -1590,6 +1640,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area1-1 .area1-1-wifi1 .wifi-text {
+    font-size: 1.8rem;
     width: 220px;
     top: 95%;
     left: 85%;
@@ -1608,11 +1659,11 @@ footer .follow-me li a[href*="tiktok"]::before {
   position: absolute;
   margin-top: 80px;
   display: block;
-  width: 250px;
+  width: 150px;
   height: auto;
   z-index: 4;
-  top: 220%;
-  left: 45%;
+  top: 205%;
+  left: 20%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
@@ -1625,6 +1676,10 @@ footer .follow-me li a[href*="tiktok"]::before {
   }
 }
 
+#area1-1 .area1-1-gbps1 .area1-1-gbps3 {
+  left: 52%;
+}
+
 @media print, screen and (min-width: 768px) {
   #area1-1 .area1-1-gbps1 .area1-1-gbps3 {
     top: 8%;
@@ -1635,7 +1690,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area1-1 .area1-1-gbps1 .kira1 {
   width: 120px;
   position: absolute;
-  top: 196%;
+  top: 180%;
   left: 20%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -1653,7 +1708,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area1-1 .area1-1-gbps1 .kira2 {
   width: 180px;
   position: absolute;
-  top: 198%;
+  top: 185%;
   left: 55%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -1690,16 +1745,16 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1-1 .area1-1-gbps1 .circle {
   position: absolute;
-  top: 265%;
-  left: 46%;
+  top: 245%;
+  left: 38%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   background: white;
   border-radius: 50%;
   -webkit-box-shadow: 0.375em 0.375em 0 0 #f7f77d;
           box-shadow: 0.375em 0.375em 0 0 #f7f77d;
-  height: 11em;
-  width: 20em;
+  height: 7em;
+  width: 18em;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -1715,16 +1770,16 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1-1 .area1-1-gbps1 .gbps-text {
   position: absolute;
-  width: 320px;
-  top: 270%;
-  left: 45%;
+  width: 220px;
+  top: 260%;
+  left: 40%;
   padding: 5px 0;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: 5;
   background-color: #e40808;
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-style: italic;
   letter-spacing: 0.1em;
   color: #fff;
@@ -1733,6 +1788,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area1-1 .area1-1-gbps1 .gbps-text {
+    font-size: 1.8rem;
     width: 220px;
     top: 58%;
     left: 66%;
@@ -1764,10 +1820,10 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1-1 .point {
   position: absolute;
-  font-size: 12px;
+  font-size: 15px;
   font-weight: bold;
-  top: -5%;
-  left: 62%;
+  top: -7%;
+  left: 64%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   -webkit-transform: rotate(18deg);
@@ -1860,7 +1916,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 #area1-1 .video {
   width: 100%;
-  padding-bottom: 56.25%;
+  padding-bottom: 16.25%;
   height: 0px;
   position: relative;
   margin-bottom: 100px;
@@ -1868,6 +1924,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area1-1 .video {
+    padding-bottom: 56.25%;
     margin-bottom: inherit;
   }
 }
@@ -1879,6 +1936,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   width: auto;
+  height: 200px;
 }
 
 @media print, screen and (min-width: 768px) {
