--- a/scss/object/_area1-1.scss
+++ b/scss/object/_area1-1.scss
@@ -124,11 +124,11 @@
       position: absolute;
       margin-top: 80px;
       display: block;
-      width: 250px;
+      width: 200px;
       height: auto;
       z-index: 4;
-      top: 220%;
-      left: 45%;
+      top: 260%;
+      left: 60%;
       transform: translate(-50%, -50%);
       @include overTab {
         width: 270px;
@@ -139,8 +139,8 @@
     .kira1 {
       width: 120px;
       position: absolute;
-      top: 196%;
-      left: 20%;
+      top: 246%;
+      left: 50%;
       transform: translate(-50%, -50%);
       z-index: 5;
       @include overTab {
@@ -152,7 +152,7 @@
     .kira2 {
       width: 180px;
       position: absolute;
-      top: 198%;
+      top: 248%;
       left: 55%;
       transform: translate(-50%, -50%);
       z-index: 5;
@@ -165,8 +165,8 @@
     .kira3 {
       width: 140px;
       position: absolute;
-      top: 210%;
-      left: 55%;
+      top: 255%;
+      left: 65%;
       transform: translate(-50%, -50%);
       transform: rotate(90deg);
       z-index: 5;
@@ -192,14 +192,14 @@
     }
     .circle {
       position: absolute;
-      top: 265%;
-      left: 46%;
+      top: 295%;
+      left: 60%;
       transform: translate(-50%, -50%);
       background: white;
       border-radius: 50%;
       box-shadow: 0.375em 0.375em 0 0 rgb(247, 247, 125);
-      height: 11em;
-      width: 20em;
+      height: 7em;
+      width: 18em;
       @include overTab {
         height: 10em;
         width: 20em;
@@ -210,20 +210,21 @@
     }
     .wifi-text {
       position: absolute;
-      width: 320px;
-      top: 270%;
-      left: 45%;
+      width: 220px;
+      top: 310%;
+      left: 60%;
       padding: 5px 0;
       transform: translate(-50%, -50%);
       z-index: 5;
       background-color: rgb(228, 8, 8);
       text-align: center;
-      font-size: 1.8rem;
+      font-size: 1.6rem;
       font-style: italic;
       letter-spacing: 0.1em;
       color: #fff;
       text-shadow: -3px 2px 0 #000;
       @include overTab {
+        font-size: 1.8rem;
         width: 220px;
         top: 95%;
         left: 85%;
@@ -238,11 +239,11 @@
       position: absolute;
       margin-top: 80px;
       display: block;
-      width: 250px;
+      width: 150px;
       height: auto;
       z-index: 4;
-      top: 220%;
-      left: 45%;
+      top: 205%;
+      left: 20%;
       transform: translate(-50%, -50%);
       @include overTab {
         width: 160px;
@@ -251,6 +252,7 @@
       }
     }
     .area1-1-gbps3{
+      left: 52%;
       @include overTab {
         top: 8%;
         left: 72%;
@@ -259,7 +261,7 @@
     .kira1 {
       width: 120px;
       position: absolute;
-      top: 196%;
+      top: 180%;
       left: 20%;
       transform: translate(-50%, -50%);
       z-index: 5;
@@ -272,7 +274,7 @@
     .kira2 {
       width: 180px;
       position: absolute;
-      top: 198%;
+      top: 185%;
       left: 55%;
       transform: translate(-50%, -50%);
       z-index: 5;
@@ -298,14 +300,14 @@
     }
     .circle {
       position: absolute;
-      top: 265%;
-      left: 46%;
+      top: 245%;
+      left: 38%;
       transform: translate(-50%, -50%);
       background: white;
       border-radius: 50%;
       box-shadow: 0.375em 0.375em 0 0 rgb(247, 247, 125);
-      height: 11em;
-      width: 20em;
+      height: 7em;
+      width: 18em;
       @include overTab {
         height: 10em;
         width: 20em;
@@ -316,20 +318,21 @@
     }
     .gbps-text {
       position: absolute;
-      width: 320px;
-      top: 270%;
-      left: 45%;
+      width: 220px;
+      top: 260%;
+      left: 40%;
       padding: 5px 0;
       transform: translate(-50%, -50%);
       z-index: 5;
       background-color: rgb(228, 8, 8);
       text-align: center;
-      font-size: 1.8rem;
+      font-size: 1.6rem;
       font-style: italic;
       letter-spacing: 0.1em;
       color: #fff;
       text-shadow: -3px 2px 0 #000;
       @include overTab {
+        font-size: 1.8rem;
         width: 220px;
         top: 58%;
         left: 66%;
@@ -354,10 +357,10 @@
   }
   .point {
     position: absolute;
-    font-size: 12px;
+    font-size: 15px;
     font-weight: bold;
-    top: -5%;
-    left: 62%;
+    top: -7%;
+    left: 64%;
     transform: translate(-50%, -50%);
     transform: rotate(18deg);
     z-index: 6;
@@ -427,11 +430,12 @@
   }
   .video {
     width: 100%;
-    padding-bottom: 56.25%;
+    padding-bottom: 16.25%;
     height: 0px;
     position: relative;
     margin-bottom: 100px;
     @include overTab {
+      padding-bottom: 56.25%;
       margin-bottom: inherit;
     }
   }
@@ -441,6 +445,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: auto;
+    height: 200px;
     @include overTab {
       width: 80%;
       height: 80%;
